--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,36 @@
 *{
-  font-family: 'pokemon-font';
+  font-family: 'Press Start 2P', cursive;
 }
+h2{
+  font-size: 2.5rem;
+}
+
 body{
   background-image: url(https://storage.googleapis.com/files.cs-first.com/images/music/7/clouds.png);
   width: 100%;
   height: 100vh;
   background-repeat: repeat-x;
+  background-color: #7fad71;
+  z-index: -1;
+
 }
 
 form{
   text-align: center;
   margin-top: 40px;
 }
+input{
+  height: 2rem;
+  font-size: 1.5rem;
+}
+
+button{
+  height: 2.5rem;
+  font-size: 1.5rem;
+  background-color: #6992f2;
+}
+
+
 
 .img{
   display: flex;
@@ -28,5 +47,5 @@ margin-left: -425px;
 .ashAndDex{
   display: flex;
   justify-content: space-around;
-  margin-top: 50px;
+  margin-top: 75px;
 }
